--- a/assignment/Project 02/Project2.html
+++ b/assignment/Project 02/Project2.html
@@ -1,45 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>DAO Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="container">
+        <nav class="navbar">
+            <a href=""><img src="./assets/white-logo.png" alt="" /></a>
 
+            <ul class="menu">
+                <li><a href="">APPs</a></li>
+                <li><a href="">DAO</a></li>
+                <li><a href="">Technology</a></li>
+                <li><a href="">Tokens</a></li>
+                <li><a href="">Contributions</a></li>
+            </ul>
 
-    <header>
-        <div class="nav-container">
-            <div class="logo">
-               <img src="./assets/white-logo.png">
+            <button>Buy 1 Token</button>
+        </nav>
+
+        <main class="main_section">
+            <div class="content">
+                <h1 style="margin-top: 90px">Lets build a better</h1>
+                <p>tomorrow , together.</p>
+                <p>Buy 1 Token. Join the DAO. CHnage the world</p>
+                <button>Request early access</button>
             </div>
-
-            <nav>
-                <ul>
-                    <li><a href="#">Apps</a></li>
-                    <li><a href="#">DAO</a></li>
-                    <li><a href="#">Technology</a></li>
-                    <li><a href="#">Token</a></li>
-                    <li><a href="#">Contributors</a></li>
-                </ul>
-            </nav>
-
-            <div class="nav-btn">
-                <button class="buy-btn">Buy 1 Token</button>
-            </div>
-        </div>
-    </header>
-
-
-    <section class="hero">
-        <div class="overlay"></div>
-
-        <div class="hero-content">
-            <h1>Lets build a better<br>tomorrow, together.</h1>
-            <p>Buy 1 Token. Join the DAO. Change the world</p>
-            <button class="cta-btn">Request early access</button>
-        </div>
-    </section>
-
+        </main>
+    </div>
 </body>
+
 </html>
