--- a/assignment/Project 03/project3.html
+++ b/assignment/Project 03/project3.html
@@ -32,7 +32,7 @@
 
         </div>
         <div class="heading">
-            <img src="./assets/globe.png" alt="" class="p1">
+            <img src="./assets/globe.png" alt="" class="p3">
             <img src="./assets/start.png" alt="" class="p2">
             <h1>What's Trend in 2025 ?</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in-</p>
@@ -48,11 +48,12 @@
         </div>
     </main>
     <footer>
-        <p>Contact Us</p>
-        <div>
+        <p class="p1">Contact Us</p>
+        <div class="img3">
             <img src="./assets/Group (1).png" alt="">
             <img src="./assets/Group (2).png" alt="">
             <img src="./assets/Group (3).png" alt="">
+            <img src="./assets/Group.png" alt="">
         </div>
     </footer>
 </body>
